--- a/Projects/02-BMICalculater/index.html
+++ b/Projects/02-BMICalculater/index.html
@@ -30,9 +30,10 @@
         <div id="results"></div>
         <div id="weight-guide">
           <h3>BMI Weight Guide</h3>
-          <p>Under Weight = Less than 18.6</p>
+          <div id="printguide" style ="font-size:15px"></div>
+          <!-- <p>Under Weight = Less than 18.6</p>
           <p>Normal Range = 18.6 and 24.9</p>
-          <p>Overweight = Greater than 24.9</p>
+          <p>Overweight = Greater than 24.9</p> -->
         </div>
       </form>
     </div>
